--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 
 :root {
     --font1: verdana, Geneva, Tahoma, sans-serif;
-    --font2: 'Passion One', Arial, sans-serif;
-    --font3: "Sriracha", Arial, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: "Sriracha", cursive;
 }
 
 body {
@@ -29,7 +29,6 @@ html, body {
     background-color: black;
     color: white;
     text-align: center;
-    
 }
 
 .titulo {
